Adjusting close focus mode button

--- a/index.html
+++ b/index.html
@@ -502,7 +502,11 @@
 )}
 
                 </div>
-                <button onClick={()=>setFocusMode(null)} className={`${darkMode?'bg-gray-700':'bg-white bg-opacity-20'} w-8 h-8 rounded-lg text-xl font-bold`}>✕</button>
+                <button onClick={()=>setFocusMode(null)} className={`${darkMode?'bg-gray-700 hover:bg-gray-600':'bg-white bg-opacity-20 hover:bg-opacity-30'} px-4 py-2 rounded-lg text-sm font-semibold flex items-center gap-1`}>
+  <span className="text-lg">←</span>
+  <span className="hidden sm:inline">Exit</span>
+</button>
+
               </div>
             </div>
 
@@ -924,4 +928,5 @@
   </script>
 </body>
 </html>
+
 
