--- a/index.html
+++ b/index.html
@@ -14,8 +14,14 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     @keyframes fadeIn{from{opacity:0}to{opacity:1}}
-    @keyframes sparkle{0%,100%{transform:scale(1);opacity:1}50%{transform:scale(1.2);opacity:.8}}
-    .sparkle{animation:sparkle .6s ease-in-out}
+@keyframes sparkle{0%,100%{transform:scale(1);opacity:1}50%{transform:scale(1.2);opacity:.8}}
+.sparkle{animation:sparkle .6s ease-in-out}
+@keyframes eq-bar{0%,100%{height:30%}50%{height:80%}}
+.eq-bar{animation:eq-bar 0.6s ease-in-out infinite}
+.eq-bar:nth-child(1){animation-delay:0s}
+.eq-bar:nth-child(2){animation-delay:0.15s}
+.eq-bar:nth-child(3){animation-delay:0.3s}
+
   </style>
 </head>
 <body>
@@ -798,9 +804,17 @@
             {activeTab==='audio'&&<div>
               {/* Intro Section */}
               <div className={`${darkMode?'bg-gray-800 border border-gray-700':'bg-white'} rounded-lg shadow p-3 mb-3`}>
-                <button onClick={toggleIntro} className={`w-full ${introPlaying?(darkMode?'bg-green-700 hover:bg-green-600':'bg-green-600 hover:bg-green-700'):(darkMode?'bg-gray-700 hover:bg-gray-600':'bg-gray-100 hover:bg-gray-200')} ${darkMode&&!introPlaying?'text-gray-200':'text-white'} ${!darkMode&&!introPlaying?'text-gray-800':''} py-3 rounded-lg font-semibold transition-colors`}>
-                  {introPlaying?'⏸️ Pause Intro':'▶ Play Intro'}
-                </button>
+                <button onClick={toggleIntro} className={`w-full ${introPlaying?(darkMode?'bg-green-700 hover:bg-green-600':'bg-green-600 hover:bg-green-700'):(darkMode?'bg-gray-700 hover:bg-gray-600':'bg-gray-100 hover:bg-gray-200')} ${darkMode&&!introPlaying?'text-gray-200':'text-white'} ${!darkMode&&!introPlaying?'text-gray-800':''} py-3 rounded-lg font-semibold transition-colors flex items-center justify-center gap-2`}>
+  {introPlaying?<>
+    <div className="flex items-end gap-0.5 h-4">
+      <div className="eq-bar w-1 bg-white rounded-full"></div>
+      <div className="eq-bar w-1 bg-white rounded-full"></div>
+      <div className="eq-bar w-1 bg-white rounded-full"></div>
+    </div>
+    <span>Pause Intro</span>
+  </>:'▶ Play Intro'}
+</button>
+
               </div>
 
               {/* Goal Sounds Section */}
@@ -929,6 +943,7 @@
   </script>
 </body>
 </html>
+
 
 
 
